style: fix scrollbars for explorer, and make scrollbar thin

--- a/src/styles.css
+++ b/src/styles.css
@@ -337,4 +337,10 @@ code {
     letter-spacing:
     var(--tracking-normal);
   }
+  
+  /* Custom Scrollbars */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--muted-foreground) / 0.05) transparent;
+  }
 }
